--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,4 @@ jobs:
       - name: 📦 Publish Docker Image to Amazon ECR
         working-directory: ./src/
         run: |
-          dotnet publish -c Release -p:ContainerRepository=${{ secrets.REPOSITORY }} -p:ContainerImageTag=1.0 -p:RuntimeIdentifier=linux-x64
-          docker push ${{ secrets.REPOSITORY }}:1.0
+          dotnet publish /t:PublishContainer -c Release -p:ContainerRepository=${{ secrets.REPOSITORY }} -p:ContainerImageTag=1.0 -p:RuntimeIdentifier=linux-x64 -p:ContainerRegistry=${{ secrets.REGISTRY }}
