--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,4 +3,5 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
-   
+    ports:
+      - "8080"
