--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -11,33 +11,16 @@ env:
   RESOURCE_GROUP: web-apps
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up .NET
+      - name: 🛠️ Checkout Repository
+        uses: actions/checkout@v4
+      - name: ⚙️ Setup .NET 8 SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.x"
-
-      - name: Build project
+          dotnet-version: 8.0.x
+      - name: 📦 Restore Dependencies
+        run: dotnet restore ./ImageResizerAPI.sln
+      - name: 🏗️ Build Project
         run: dotnet build ./ImageResizerAPI.sln --no-restore
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Azure Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.ACR_NAME }}.azurecr.io
-          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_IMAGE }}:${{ github.sha }}
-          file: Refit.Api/Dockerfile
