--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -42,7 +42,7 @@ jobs:
     - name: 🔑 Login to Azure Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io
+        registry: ${{ env.ACR_NAME }}.azurecr.io
         username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
         password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
